--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quillo - Unlock Your Resume's Full Potential</title>
-    <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+    <title>Studdies - Find your studymates with ease</title>
+    <link rel="icon" type="image/x-icon" href="static/images/studdies_logo.ico">
     <link rel="stylesheet" href="index.css">
     <!-- Google Font Poppins -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
@@ -15,8 +15,8 @@
         <div class="nav-container">
             <!-- Logo, Brand Name, and Menu Toggle Button -->
             <div class="brand">
-                <img src="static/images/logo.jpg" alt="Quillo Logo" class="logo-icon">
-                <span class="brand-name">Quillo</span>
+                <img src="static/images/studdies_logo.png" alt="Studdies Logo" class="logo-icon">
+                <span class="brand-name">Studdies</span>
             </div>
     
             <!-- Hamburger Menu Button -->
@@ -29,8 +29,7 @@
             <!-- Navigation Links -->
             <div class="nav-links">
                 <a href="https://tally.so/r/w5jP7o">Get Started</a>
-                <a href="mailto:aryanguls@gmail.com">Contact Us</a>
-                <a href="#">Pricing</a>
+                <a href="mailto:crissyl@stanford.edu">Contact Us</a>
             </div>
         </div>
     </nav>
@@ -41,17 +40,17 @@
         <!-- Separated container for main content -->
         <div class="content-container">
             <div class="intro">
-                <h1>Unlock Your Resume's Full Potential.</h1>
-                <p>Automatically optimize and tailor your resume for each unique job application. Start today and bring your job application to the next level.</p>
+                <h1>Finding Your Study Squad Made Easy.</h1>
+                <p>We simplify the process of finding the right group of classmates or partners using student profiles to effortlessly connect you with peers in your classes.</p>
                 <div class="btn-group">
                     <a href="https://tally.so/r/w5jP7o" class="primary-btn">Try it Now</a>
-                    <a href="mailto:aryanguls@gmail.com" class="primary-btn">Know More</a>
+                    <a href="mailto:crissyl@stanford.edu" class="primary-btn">Know More</a>
                 </div>
             </div>
 
             <!-- Right-side content -->
             <div class="graphic-container">
-                <img src="static/images/graphic7.png" alt="Description of your graphic" class="main-graphic">
+                <img src="static/images/Screenshot 2024-05-13 at 2.43.39 PM.png" alt="Description of your graphic" class="main-graphic">
             </div>
 
         </div>
