Login/Signup Pages added

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <!-- Right-side content -->
             <div class="graphic-container">
-                <img src="static/images/Screenshot 2024-05-13 at 2.43.39 PM.png" alt="Description of your graphic" class="main-graphic">
+                <img src="static/images/studdies_mainGraphic.png" alt="Description of your graphic" class="main-graphic">
             </div>
 
         </div>
