--- a/login.html
+++ b/login.html
@@ -13,12 +13,11 @@
         <div class="login-form">
             <img src="static/images/studdies_logo.png" alt="Studdies Logo" class="logo-login">
             <h1>Login</h1>
-            <form action="submit_signup.php" method="POST">
-                <input type="name" id="name" name="name" placeholder="Enter your name" required>
+            <form action="submit_login.php" method="POST">
                 <input type="email" id="email" name="email" placeholder="Enter your email" required>
                 <input type="password" id="password" name="password" placeholder="Enter your password" required>
                 <button type="submit" class="login-btn">Login</button>
-                <p>Already a member? <a href="login.html">Login now</a></p>
+                <p>Not a member? <a href="signup.html">Signup now</a></p>
             </form>
         </div>
     </div>
