All Pages Connected

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             
             <!-- Navigation Links -->
             <div class="nav-links">
-                <a href="https://tally.so/r/w5jP7o">Get Started</a>
+                <a href="login.html">Get Started</a>
                 <a href="mailto:crissyl@stanford.edu">Contact Us</a>
             </div>
         </div>
@@ -43,7 +43,7 @@
                 <h1>Finding Your Study Squad Made Easy.</h1>
                 <p>We simplify the process of finding the right group of classmates or partners using student profiles to effortlessly connect you with peers in your classes.</p>
                 <div class="btn-group">
-                    <a href="https://tally.so/r/w5jP7o" class="primary-btn">Try it Now</a>
+                    <a href="login.html" class="primary-btn">Try it Now</a>
                     <a href="mailto:crissyl@stanford.edu" class="primary-btn">Know More</a>
                 </div>
             </div>
