--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,7 @@
     <div class="login-container">
         <div class="login-form">
             <img src="static/images/studdies_logo.png" alt="Studdies Logo" class="logo-login">
-            <h1>Login</h1>
+            <h1>Sign Up</h1>
             <form action="submit_signup.php" method="POST">
                 <input type="name" id="name" name="name" placeholder="Enter your name" required>
                 <input type="email" id="email" name="email" placeholder="Enter your email" required>
