--- a/homepage.html
+++ b/homepage.html
@@ -15,11 +15,26 @@
         </div>
         <div class="nav-buttons-container">
             <div class="nav-buttons">
-                <button class="nav-btn" onclick="goHome()">Home</button>
-                <button class="nav-btn" onclick="showClass('class1')">Class 1</button>
-                <button class="nav-btn" onclick="showClass('class2')">Class 2</button>
-                <button class="nav-btn" onclick="showClass('class3')">Class 3</button>
-                <button class="nav-btn" onclick="showClass('class4')">Class 4</button>
+                <button class="nav-btn" onclick="goHome()">
+                    <img src="static/images/home.png" alt="Home Logo" class="nav-logo">
+                    Home
+                </button>
+                <button class="nav-btn" onclick="showClass('class1')">
+                    <img src="static/images/book.png" alt="Class 1 Logo" class="nav-logo">
+                    Class 1
+                </button>
+                <button class="nav-btn" onclick="showClass('class2')">
+                    <img src="static/images/book.png" alt="Class 2 Logo" class="nav-logo">
+                    Class 2
+                </button>
+                <button class="nav-btn" onclick="showClass('class3')">
+                    <img src="static/images/book.png" alt="Class 3 Logo" class="nav-logo">
+                    Class 3
+                </button>
+                <button class="nav-btn" onclick="showClass('class4')">
+                    <img src="static/images/book.png" alt="Class 4 Logo" class="nav-logo">
+                    Class 4
+                </button>
             </div>
         </div>
         <div class="nav-links">
