added search bar

--- a/homepage.html
+++ b/homepage.html
@@ -38,8 +38,8 @@
             </div>
         </div>
         <div class="nav-links">
-            <a href="#" class="nav-link">Your Profile</a>
-            <a href="#" class="nav-link">Log Out</a>
+            <a href="profile.html" class="nav-link">Your Profile</a>
+            <a href="index.html" class="nav-link">Log Out</a>
         </div>
         <div class="hamburger" onclick="toggleDropdown()">
             <div class="bar"></div>
@@ -74,6 +74,10 @@
         <div class="class-content" id="class-content">
             <!-- Class content sections here -->
             <div id="class1-content" class="class-section" style="display: none;">
+                <div class="search-bar">
+                    <input type="text" placeholder="Search Class 1..." id="search-class1">
+                    <button onclick="searchClass('class1')">Search</button>
+                </div>
                 <h2>Class 1 People</h2>
                 <div class="modal-buttons-container">
                     <button id="btn1-class1" class="modal-button">
@@ -126,6 +130,10 @@
             </div>
 
             <div id="class2-content" class="class-section" style="display: none;">
+                <div class="search-bar">
+                    <input type="text" placeholder="Search Class 2..." id="search-class2">
+                    <button onclick="searchClass('class2')">Search</button>
+                </div>
                 <h2>Class 2 People</h2>
                 <div class="modal-buttons-container">
                     <button id="btn1-class2" class="modal-button">
@@ -178,6 +186,10 @@
             </div>
 
             <div id="class3-content" class="class-section" style="display: none;">
+                <div class="search-bar">
+                    <input type="text" placeholder="Search Class 3..." id="search-class3">
+                    <button onclick="searchClass('class3')">Search</button>
+                </div>
                 <h2>Class 3 People</h2>
                 <div class="modal-buttons-container">
                     <button id="btn1-class3" class="modal-button">
@@ -230,6 +242,10 @@
             </div>
 
             <div id="class4-content" class="class-section" style="display: none;">
+                <div class="search-bar">
+                    <input type="text" placeholder="Search Class 4..." id="search-class4">
+                    <button onclick="searchClass('class4')">Search</button>
+                </div>
                 <h2>Class 4 People</h2>
                 <div class="modal-buttons-container">
                     <button id="btn1-class4" class="modal-button">
