modifications to signup/login

--- a/login.html
+++ b/login.html
@@ -9,6 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>    
+    <div class="navbar">
+        <a href="index.html">
+            <img src="static/images/studdies_logo.png" alt="Studdies Logo" class="header-logo">
+        </a>
+        <a href="index.html" class="back-home">
+            <span>&larr; Back</span>
+        </a>
+    </div>
     <div class="login-container">
         <div class="login-form">
             <img src="static/images/studdies_logo.png" alt="Studdies Logo" class="logo-login">
