modifications to modal design

--- a/homepage.html
+++ b/homepage.html
@@ -82,49 +82,69 @@
                 <div class="modal-buttons-container">
                     <button id="btn1-class1" class="modal-button">
                         <img src="static/images/baekhyun.jpg" alt="Preview of the image">
-                        <div class="like-button">Like</div>
+                        <div class="connect-button">Connect</div>
                         <span class="button-text">
                             <strong>Byun Baekhyun</strong><br>
                             Senior 2025<br>
                             <em>About Me:</em> I have a corgi. I love him.
                         </span>
-                        <div class="group-status-free">Need Partner</div>
+                        <div class="status-badge free">Need Partner</div>
                     </button>
                     <button id="btn2-class1" class="modal-button">
                         <img src="static/images/kyungsoo.png" alt="Preview of the image">
-                        <div class="like-button">Like</div>
+                        <div class="connect-button">Connect</div>
                         <span class="button-text">
                             <strong>Doh Kyungsoo</strong><br>
                             Junior 2025<br>
                             <em>About Me:</em> RnB only
                         </span>
-                        <div class="group-status-taken">Has Partner</div>
+                        <div class="status-badge taken">Has Partner</div>
+                    </button>
+                    <button id="btn3-class1" class="modal-button">
+                        <img src="static/images/kyungsoo.png" alt="Preview of the image">
+                        <div class="connect-button">Connect</div>
+                        <span class="button-text">
+                            <strong>Doh Kyungsoo</strong><br>
+                            Junior 2025<br>
+                            <em>About Me:</em> RnB only
+                        </span>
+                        <div class="status-badge taken">Has Partner</div>
                     </button>
                 </div>
                 <div id="modal1-class1" class="modal">
                     <div class="modal-content">
-                        <span class="close">&times;</span>
-                        <img src="static/images/baekhyun.jpg" alt="Description of the image">
-                        <div class="like-button">Like</div>
+                        <img src="static/images/baekhyun.jpg" alt="Description of the image" class="modal-image">
+                        <div class="connect-button">Connect</div>
                         <div class="modal-text">
                             <strong>Byun Baekhyun</strong><br>
                             Senior 2025<br>
                             <em>About Me:</em> I have a corgi. I love him.
                         </div>
-                        <div class="group-status-free">Need Partner</div>
+                        <div class="status-badge free">Need Partner</div>
                     </div>
                 </div>
                 <div id="modal2-class1" class="modal">
                     <div class="modal-content">
-                        <span class="close">&times;</span>
-                        <img src="static/images/kyungsoo.png" alt="Description of the image">
-                        <div class="like-button">Like</div>
+                        <img src="static/images/kyungsoo.png" alt="Description of the image" class="modal-image">
+                        <div class="connect-button">Connect</div>
                         <div class="modal-text">
                             <strong>Doh Kyungsoo</strong><br>
                             Junior 2025<br>
                             <em>About Me:</em> RnB only
                         </div>
-                        <div class="group-status-taken">Has Partner</div>
+                        <div class="status-badge taken">Has Partner</div>
+                    </div>
+                </div>
+                <div id="modal3-class1" class="modal">
+                    <div class="modal-content">
+                        <img src="static/images/kyungsoo.png" alt="Description of the image" class="modal-image">
+                        <div class="connect-button">Connect</div>
+                        <div class="modal-text">
+                            <strong>Doh Kyungsoo</strong><br>
+                            Junior 2025<br>
+                            <em>About Me:</em> RnB only
+                        </div>
+                        <div class="status-badge taken">Has Partner</div>
                     </div>
                 </div>
             </div>
@@ -138,7 +158,7 @@
                 <div class="modal-buttons-container">
                     <button id="btn1-class2" class="modal-button">
                         <img src="static/images/kai.jpeg" alt="Preview of the image">
-                        <div class="like-button">Like</div>
+                        <div class="like-button">Connect</div>
                         <span class="button-text">
                             <strong>Kim Jongin</strong><br>
                             Senior 2025<br>
@@ -148,7 +168,7 @@
                     </button>
                     <button id="btn2-class2" class="modal-button">
                         <img src="static/images/kyungsoo.png" alt="Preview of the image">
-                        <div class="like-button">Like</div>
+                        <div class="like-button">Connect</div>
                         <span class="button-text">
                             <strong>Doh Kyungsoo</strong><br>
                             Junior 2025<br>
@@ -159,28 +179,26 @@
                 </div>
                 <div id="modal1-class2" class="modal">
                     <div class="modal-content">
-                        <span class="close">&times;</span>
-                        <img src="static/images/kai.jpeg" alt="Description of the image">
-                        <div class="like-button">Like</div>
+                        <img src="static/images/kai.jpeg" alt="Description of the image" class="modal-image">
+                        <div class="connect-button">Connect</div>
                         <div class="modal-text">
                             <strong>Kim Jongin</strong><br>
                             Senior 2025<br>
                             <em>About Me:</em> Dancing is my passion.
                         </div>
-                        <div class="group-status-free">Need Partner</div>
+                        <div class="status-badge free">Need Partner</div>
                     </div>
                 </div>
                 <div id="modal2-class2" class="modal">
                     <div class="modal-content">
-                        <span class="close">&times;</span>
-                        <img src="static/images/kyungsoo.png" alt="Description of the image">
-                        <div class="like-button">Like</div>
+                        <img src="static/images/kyungsoo.png" alt="Description of the image" class="modal-image">
+                        <div class="connect-button">Connect</div>
                         <div class="modal-text">
                             <strong>Doh Kyungsoo</strong><br>
                             Junior 2025<br>
                             <em>About Me:</em> RnB only
                         </div>
-                        <div class="group-status-taken">Has Partner</div>
+                        <div class="status-badge taken">Has Partner</div>
                     </div>
                 </div>
             </div>
@@ -194,7 +212,7 @@
                 <div class="modal-buttons-container">
                     <button id="btn1-class3" class="modal-button">
                         <img src="static/images/baekhyun.jpg" alt="Preview of the image">
-                        <div class="like-button">Like</div>
+                        <div class="like-button">Connect</div>
                         <span class="button-text">
                             <strong>Byun Baekhyun</strong><br>
                             Senior 2025<br>
@@ -204,7 +222,7 @@
                     </button>
                     <button id="btn2-class3" class="modal-button">
                         <img src="static/images/kyungsoo.png" alt="Preview of the image">
-                        <div class="like-button">Like</div>
+                        <div class="like-button">Connect</div>
                         <span class="button-text">
                             <strong>Doh Kyungsoo</strong><br>
                             Junior 2025<br>
@@ -215,28 +233,26 @@
                 </div>
                 <div id="modal1-class3" class="modal">
                     <div class="modal-content">
-                        <span class="close">&times;</span>
-                        <img src="static/images/baekhyun.jpg" alt="Description of the image">
-                        <div class="like-button">Like</div>
+                        <img src="static/images/baekhyun.jpg" alt="Description of the image" class="modal-image">
+                        <div class="connect-button">Connect</div>
                         <div class="modal-text">
                             <strong>Byun Baekhyun</strong><br>
                             Senior 2025<br>
                             <em>About Me:</em> I have a corgi. I love him.
                         </div>
-                        <div class="group-status-free">Need Partner</div>
+                        <div class="status-badge free">Need Partner</div>
                     </div>
                 </div>
                 <div id="modal2-class3" class="modal">
                     <div class="modal-content">
-                        <span class="close">&times;</span>
-                        <img src="static/images/kyungsoo.png" alt="Description of the image">
-                        <div class="like-button">Like</div>
+                        <img src="static/images/kyungsoo.png" alt="Description of the image" class="modal-image">
+                        <div class="connect-button">Connect</div>
                         <div class="modal-text">
                             <strong>Doh Kyungsoo</strong><br>
                             Junior 2025<br>
                             <em>About Me:</em> RnB only
                         </div>
-                        <div class="group-status-taken">Has Partner</div>
+                        <div class="status-badge taken">Has Partner</div>
                     </div>
                 </div>
             </div>
@@ -249,8 +265,8 @@
                 <h2>Class 4 People</h2>
                 <div class="modal-buttons-container">
                     <button id="btn1-class4" class="modal-button">
-                        <img src="static/images/person4.jpg" alt="Preview of the image">
-                        <div class="like-button">Like</div>
+                        <img src="static/images/no-profile.png" alt="Preview of the image">
+                        <div class="like-button">Connect</div>
                         <span class="button-text">
                             <strong>Person Four</strong><br>
                             Senior 2025<br>
@@ -259,8 +275,8 @@
                         <div class="group-status-free">Need Partner</div>
                     </button>
                     <button id="btn2-class4" class="modal-button">
-                        <img src="static/images/person5.jpg" alt="Preview of the image">
-                        <div class="like-button">Like</div>
+                        <img src="static/images/no-profile.png" alt="Preview of the image">
+                        <div class="like-button">Connect</div>
                         <span class="button-text">
                             <strong>Person Five</strong><br>
                             Junior 2025<br>
@@ -271,28 +287,26 @@
                 </div>
                 <div id="modal1-class4" class="modal">
                     <div class="modal-content">
-                        <span class="close">&times;</span>
-                        <img src="static/images/person4.jpg" alt="Description of the image">
-                        <div class="like-button">Like</div>
+                        <img src="static/images/no-profile.png" alt="Description of the image" class="modal-image">
+                        <div class="connect-button">Connect</div>
                         <div class="modal-text">
                             <strong>Person Four</strong><br>
                             Senior 2025<br>
                             <em>About Me:</em> Loves coding.
                         </div>
-                        <div class="group-status-free">Need Partner</div>
+                        <div class="status-badge free">Need Partner</div>
                     </div>
                 </div>
                 <div id="modal2-class4" class="modal">
                     <div class="modal-content">
-                        <span class="close">&times;</span>
-                        <img src="static/images/person5.jpg" alt="Description of the image">
-                        <div class="like-button">Like</div>
+                        <img src="static/images/no-profile.png" alt="Description of the image" class="modal-image">
+                        <div class="connect-button">Connect</div>
                         <div class="modal-text">
                             <strong>Person Five</strong><br>
                             Junior 2025<br>
                             <em>About Me:</em> Enjoys hiking.
                         </div>
-                        <div class="group-status-taken">Has Partner</div>
+                        <div class="status-badge taken">Has Partner</div>
                     </div>
                 </div>
             </div>
