--- a/profile.html
+++ b/profile.html
@@ -9,6 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="navbar">
+        <a href="homepage.html">
+            <img src="static/images/studdies_logo.png" alt="Studdies Logo" class="header-logo">
+        </a>
+        <a href="homepage.html" class="back-home">
+            <span>&larr; Back</span>
+        </a>
+    </div>
     <div class="profile-container">
         <h1>Your Profile</h1>
         <div class="profile-form">
