added search functionality

--- a/homepage.html
+++ b/homepage.html
@@ -75,7 +75,7 @@
             <!-- Class content sections here -->
             <div id="class1-content" class="class-section" style="display: none;">
                 <div class="search-bar">
-                    <input type="text" placeholder="Search Class 1..." id="search-class1">
+                    <input type="text" placeholder="Search Class 1..." id="search-class1" onkeyup="filterNames('class1')">
                     <button onclick="searchClass('class1')">Search</button>
                 </div>
                 <h2>Class 1 People</h2>
@@ -151,7 +151,7 @@
 
             <div id="class2-content" class="class-section" style="display: none;">
                 <div class="search-bar">
-                    <input type="text" placeholder="Search Class 2..." id="search-class2">
+                    <input type="text" placeholder="Search Class 2..." id="search-class2" onkeyup="filterNames('class2')">
                     <button onclick="searchClass('class2')">Search</button>
                 </div>
                 <h2>Class 2 People</h2>
@@ -205,7 +205,7 @@
 
             <div id="class3-content" class="class-section" style="display: none;">
                 <div class="search-bar">
-                    <input type="text" placeholder="Search Class 3..." id="search-class3">
+                    <input type="text" placeholder="Search Class 3..." id="search-class3" onkeyup="filterNames('class3')">
                     <button onclick="searchClass('class3')">Search</button>
                 </div>
                 <h2>Class 3 People</h2>
@@ -259,7 +259,7 @@
 
             <div id="class4-content" class="class-section" style="display: none;">
                 <div class="search-bar">
-                    <input type="text" placeholder="Search Class 4..." id="search-class4">
+                    <input type="text" placeholder="Search Class 4..." id="search-class4" onkeyup="filterNames('class4')">
                     <button onclick="searchClass('class4')">Search</button>
                 </div>
                 <h2>Class 4 People</h2>
