--- a/homepage.html
+++ b/homepage.html
@@ -75,7 +75,10 @@
             <!-- Class content sections here -->
             <div id="class1-content" class="class-section" style="display: none;">
                 <div class="search-bar">
-                    <input type="text" placeholder="Search Class 1..." id="search-class1" onkeyup="filterNames('class1')">
+                    <div class="search-container">
+                        <input type="text" placeholder="Search Class 1..." id="search-class1" onkeyup="filterNames('class1')">
+                        <span class="search-icon">&#128269;</span> <!-- Unicode magnifying glass icon -->
+                    </div>
                     <select id="filter-class1" onchange="filterNames('class1')">
                         <option value="">All</option>
                         <option value="Coding">Skill: Coding</option>
@@ -84,7 +87,6 @@
                         <option value="Need Partner">Status: Need Partner</option>
                         <option value="Has Partner">Status: Has Partner</option>
                     </select>
-                    <button onclick="searchClass('class1')">Search</button>
                 </div>
                 
                 <h2>Class 1 People</h2>
@@ -122,6 +124,10 @@
                         </span>
                         <div class="status-badge taken">Has Partner</div>
                     </button>
+                </div>
+                <div id="no-results-class1" class="no-results">
+                    <img src="static/images/no-result.png" alt="No results found">
+                    <p>Sorry! It seems like no students can be found with that match. Reach out to us here and we'll get to finding your perfect study buddies.</p>
                 </div>
                 <div id="modal1-class1" class="modal">
                     <div class="modal-content">
@@ -166,8 +172,18 @@
 
             <div id="class2-content" class="class-section" style="display: none;">
                 <div class="search-bar">
-                    <input type="text" placeholder="Search Class 2..." id="search-class2" onkeyup="filterNames('class2')">
-                    <button onclick="searchClass('class2')">Search</button>
+                    <div class="search-container">
+                        <input type="text" placeholder="Search Class 2..." id="search-class2" onkeyup="filterNames('class2')">
+                        <span class="search-icon">&#128269;</span> <!-- Unicode magnifying glass icon -->
+                    </div>
+                    <select id="filter-class2" onchange="filterNames('class2')">
+                        <option value="">All</option>
+                        <option value="Coding">Skill: Coding</option>
+                        <option value="Senior">Year: Senior</option>
+                        <option value="Junior">Year: Junior</option>
+                        <option value="Need Partner">Status: Need Partner</option>
+                        <option value="Has Partner">Status: Has Partner</option>
+                    </select>
                 </div>
                 <h2>Class 2 People</h2>
                 <div class="modal-buttons-container">
@@ -193,6 +209,10 @@
                         </span>
                         <div class="group-status-taken">Has Partner</div>
                     </button>
+                </div>
+                <div id="no-results-class2" class="no-results">
+                    <img src="static/images/no-result.png" alt="No results found">
+                    <p>Sorry! It seems like no students can be found with that match. Reach out to us here and we'll get to finding your perfect study buddies.</p>
                 </div>
                 <div id="modal1-class2" class="modal">
                     <div class="modal-content">
@@ -224,8 +244,18 @@
 
             <div id="class3-content" class="class-section" style="display: none;">
                 <div class="search-bar">
-                    <input type="text" placeholder="Search Class 3..." id="search-class3" onkeyup="filterNames('class3')">
-                    <button onclick="searchClass('class3')">Search</button>
+                    <div class="search-container">
+                        <input type="text" placeholder="Search Class 3..." id="search-class3" onkeyup="filterNames('class3')">
+                        <span class="search-icon">&#128269;</span> <!-- Unicode magnifying glass icon -->
+                    </div>
+                    <select id="filter-class3" onchange="filterNames('class3')">
+                        <option value="">All</option>
+                        <option value="Coding">Skill: Coding</option>
+                        <option value="Senior">Year: Senior</option>
+                        <option value="Junior">Year: Junior</option>
+                        <option value="Need Partner">Status: Need Partner</option>
+                        <option value="Has Partner">Status: Has Partner</option>
+                    </select>
                 </div>
                 <h2>Class 3 People</h2>
                 <div class="modal-buttons-container">
@@ -251,6 +281,10 @@
                         </span>
                         <div class="group-status-taken">Has Partner</div>
                     </button>
+                </div>
+                <div id="no-results-class3" class="no-results">
+                    <img src="static/images/no-result.png" alt="No results found">
+                    <p>Sorry! It seems like no students can be found with that match. Reach out to us here and we'll get to finding your perfect study buddies.</p>
                 </div>
                 <div id="modal1-class3" class="modal">
                     <div class="modal-content">
@@ -282,8 +316,18 @@
 
             <div id="class4-content" class="class-section" style="display: none;">
                 <div class="search-bar">
-                    <input type="text" placeholder="Search Class 4..." id="search-class4" onkeyup="filterNames('class4')">
-                    <button onclick="searchClass('class4')">Search</button>
+                    <div class="search-container">
+                        <input type="text" placeholder="Search Class 4..." id="search-class4" onkeyup="filterNames('class4')">
+                        <span class="search-icon">&#128269;</span> <!-- Unicode magnifying glass icon -->
+                    </div>
+                    <select id="filter-class4" onchange="filterNames('class4')">
+                        <option value="">All</option>
+                        <option value="Coding">Skill: Coding</option>
+                        <option value="Senior">Year: Senior</option>
+                        <option value="Junior">Year: Junior</option>
+                        <option value="Need Partner">Status: Need Partner</option>
+                        <option value="Has Partner">Status: Has Partner</option>
+                    </select>
                 </div>
                 <h2>Class 4 People</h2>
                 <div class="modal-buttons-container">
@@ -309,6 +353,10 @@
                         </span>
                         <div class="group-status-taken">Has Partner</div>
                     </button>
+                </div>
+                <div id="no-results-class4" class="no-results">
+                    <img src="static/images/no-result.png" alt="No results found">
+                    <p>Sorry! It seems like no students can be found with that match. Reach out to us here and we'll get to finding your perfect study buddies.</p>
                 </div>
                 <div id="modal1-class4" class="modal">
                     <div class="modal-content">
